# lattice

./: --inspect  --inspect.meta.json  AGENTS.md  README.md  factorial.lattice  lattice  pyproject.toml  run_wasm.js  spec.lattice  spec.md  stdlib.lattice  temp_compilation_output.wasm  temp_compilation_output.wasm.metadata.json  test.lattice  test.wasm
compiler/: diagnostics.py  emitter.py  entry_metadata.py  errors.py  input_metadata.py  input_types.py  main.py  overloads.py  parser.py  resolver.py  stdlib.py  string_literal.py  type_debug.py  verifier.py
examples/: basics.lattice  io.lattice  lists.lattice  matrices.lattice  queues.lattice  trees.lattice
tests/: ackermann.lattice  arithmetic_call_unsafe.lattice  arithmetic_safe.lattice  arithmetic_unsafe_bounds.lattice  arithmetic_unsafe_div.lattice  binary_search.lattice  call_arity_unsafe.lattice  cli_command.lattice  collatz.lattice  const_reassign_unsafe.lattice  dep_b.lattice  dep_c.lattice  factorial.lattice  factorial_incorrect_termination.lattice  factorial_incorrect_types.lattice  gcd.lattice  import_star_safe.lattice  import_test_safe.lattice  import_test_unsafe_internal.lattice  import_test_unsafe_type.lattice  import_transitive_safe.lattice  input_untyped_unsafe.lattice  io_advanced_safe.lattice  io_in_pure_unsafe.lattice  io_safe.lattice  join_err.lattice  let_reassign_unsafe.lattice  list_input_no_size_unsafe.lattice  list_safe.lattice  list_sizes.lattice  list_unsafe.lattice  main_imported.lattice  main_imported_dep.lattice  math_utils.lattice  math_utils_internal_type.lattice  option_safe.lattice  (+20 more)
(+5 files in other folders)
