[project]
name = "lattice"
version = "0.1.0"
description = "A statically typed language with compile-time safety proofs, compiling to WebAssembly"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "z3-solver>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["compiler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
